fix bug that requests image of wrong size from gravatar, improve the styling of static pages

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -231,3 +231,7 @@ textarea {
     }
   }
 }
+
+#about-page ol li{
+  margin: 8px 0;
+}
